--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,22 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="你的名字-用诗经 楚辞 唐诗 宋词起名字">
   <meta name="keywords" content="起名,诗经,楚辞,唐诗,宋词">
-  <title>你的名字-用诗经 楚辞 唐诗 宋词起名字</title>
+  <title>公司名字-用诗经 楚辞 唐诗 宋词起名字</title>
 </head>
 
 <body>
   <div class="wrapper">
     <div class="input-container">
-      <h3 class="title">你的名字<small> 古诗文起名V2.0</small></h3>
-      <p>
-      <div>
-        本项目全部开源, 作者:holynova
-      </div>
-      <a target='_blank' href='https://github.com/holynova/gushi_namer' alt='https://github.com/holynova/gushi_namer'>
-        fork me on Github
-      </a>
-      </p>
+      <h3 class="title">公司名字<small> 古诗文起名V2.0</small></h3>
       <div class="book-selector">
       </div>
       <p class="family">
-        <label for='family-name'>姓氏 </label>
-        <input type="text" name="family-name" value="李" placeholder="输入姓氏">
+        <label for='family-name'>区域 </label>
+        <input type="text" name="area" value="上海" placeholder="输入字">
+        <label for='family-name'>公司吉字 </label>
+        <input type="text" name="family-name" value="到" placeholder="输入字">
+        <label for='family-name'>公司类型 </label>
+        <input type="text" name="company" value="有限公司" placeholder="输入字">
       </p>
       <button class='btn-go'>起名</button>
     </div>
